[gd_scene load_steps=7 format=2]

[ext_resource path="res://LoonyLips.gd" type="Script" id=1]
[ext_resource path="res://assets/blackboard.jpg" type="Texture" id=2]
[ext_resource path="res://assets/Feltpen.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/blue_button11.png" type="Texture" id=4]
[ext_resource path="res://assets/blue_button12.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 3 )

[node name="LoonyLips" type="Node2D"]
script = ExtResource( 1 )

[node name="Blackboard" type="TextureRect" parent="."]
margin_right = 1020.0
margin_bottom = 600.0
texture = ExtResource( 2 )
expand = true

[node name="StoryText" type="RichTextLabel" parent="Blackboard"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1010.0
margin_bottom = 490.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "Placeholder Text"
text = "Placeholder Text"

[node name="TextBox" type="LineEdit" parent="Blackboard"]
margin_left = 20.0
margin_top = 510.0
margin_right = 780.0
margin_bottom = 580.0
custom_fonts/font = SubResource( 1 )
text = "TextBox"

[node name="TextureButton" type="TextureButton" parent="Blackboard"]
margin_left = 790.0
margin_top = 500.0
margin_right = 890.0
margin_bottom = 590.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="ButtonLabel" type="RichTextLabel" parent="Blackboard/TextureButton"]
margin_left = 110.0
margin_top = 20.0
margin_right = 220.0
margin_bottom = 70.0
custom_fonts/normal_font = SubResource( 1 )
[connection signal="text_entered" from="Blackboard/TextBox" to="." method="_on_TextBox_text_entered"]
[connection signal="pressed" from="Blackboard/TextureButton" to="." method="_on_TextureButton_pressed"]
